@@ -1,6 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'com.google.protobuf' version '0.9.4'
+	id 'eclipse'
 }
 
 group = 'etri'
@@ -80,3 +81,39 @@ tasks.processResources {
 	exclude("**/base.proto")
 	exclude("**/stream.proto")
 }
+
+tasks.named('test') {
+	useJUnit()
+	jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+}
+
+eclipse {
+	classpath {
+		defaultOutputDir = file('build/classes/java/main')
+		file {
+			whenMerged { cp ->
+				cp.entries.each { entry ->
+					if (entry.kind == 'src' && entry.path == 'src/main/java') {
+						entry.output = 'build/classes/java/main'
+					}
+					if (entry.kind == 'src' && entry.path == 'build/generated/source/proto/main/java') {
+						entry.output = 'build/classes/java/main'
+					}
+					if (entry.kind == 'src' && entry.path == 'build/generated/source/proto/main/grpc') {
+						entry.output = 'build/classes/java/main'
+					}
+					if (entry.kind == 'src' && entry.path == 'src/main/resources') {
+						entry.output = 'build/classes/java/main'
+					}
+					if (entry.kind == 'src' && entry.path == 'src/test/java') {
+						entry.output = 'build/classes/java/test'
+					}
+					if (entry.kind == 'src' && entry.path == 'build/generated/source/proto/test/java') {
+						entry.output = 'build/classes/java/test'
+					}
+				}
+			}
+		}
+	}
+}
+
